// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<div
  className="list__background"
>
  <div
    className="content-container"
  >
    <div
      className="list-header"
    >
      <div
        className="show-for-mobile list-header__text"
      >
        Expenses
      </div>
      <div
        className="show-for-desktop list-header__text"
      >
        Expense
      </div>
      <div
        className="show-for-desktop list-header__text"
      >
        Amount
      </div>
    </div>
    <div
      className="list-item list-item__message"
    >
      <span>
        No expenses...lucky you
      </span>
    </div>
    <div
      className="list-footer"
    >
      <div
        className="list-footer__text"
      >
        Wooh, that's it!
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="list__background"
>
  <div
    className="content-container"
  >
    <div
      className="list-header"
    >
      <div
        className="show-for-mobile list-header__text"
      >
        Expenses
      </div>
      <div
        className="show-for-desktop list-header__text"
      >
        Expense
      </div>
      <div
        className="show-for-desktop list-header__text"
      >
        Amount
      </div>
    </div>
    <ExpenseListItem
      amount={4000}
      createdAt={0}
      description="Phone"
      id={1}
      key="1"
      note="test note 1"
    />
    <ExpenseListItem
      amount={75000}
      createdAt={-604800000}
      description="Rent"
      id={2}
      key="2"
      note="test note 2"
    />
    <ExpenseListItem
      amount={10000}
      createdAt={604800000}
      description="Utility"
      id={3}
      key="3"
      note="test note 3"
    />
    <div
      className="list-footer"
    >
      <div
        className="list-footer__text"
      >
        Wooh, that's it!
      </div>
    </div>
  </div>
</div>
`;
